/***********************************************************************
X3 ChangeLog

2009-01-26  Alex Schumann  <rubin@afternet.org>

	* src/plugins/annoy/plugin.py: new version of test plugin

2009-01-25  Alex Schumann  <rubin@afternet.org>

	* Makefile.am: forgot to copy modpython.py where it goes.

2009-01-24  Alex Schumann  <rubin@afternet.org>

	* src/mod-python.c: added plugin hook to log to x3 logs, and worked
	out the basics of callback registration.

	* src/modpython.py: x3 logging hook and new callback registration

	* Makefile.am: install modpython.py and plugins/ during make install

	* install-r.sh: shell script to do recursive copy with exclusions

2009-01-23  Alex Schumann  <rubin@afternet.org>

	* src/mod-python.c: refactor to use class-based hook manager. Seems to
	run now. Also added better comments.

	* src/modpython.py: refactored into classes. Seems to run now. Cleaned
	up a bit.

2008-01-12  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/opserv.c: Fix for SF bug #2491886. Added OSMSG_USER_ALREADY_THERE.

2009-01-04  Alex Schumann  <rubin@afternet.org>

	* src/nickserv.c: fix access change bug when using ldap but not
	ldap_oper_group_dn.

2009-01-01  Matthew Beeching  <jobe@mdbnet.co.uk>

	* languages/README.txt: Changed validate_lang.pl to validate.pl

	* languages/validate.pl: Set executable

	* languages/lang_export.sh: Set executable

2008-12-27  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/chanserv.c: SF feature 1476390. Added nodelete option to
	MERGE.

	* src/chanserv.help: SF feature 1476390. Added nodelete option
	to MERGE.

2008-12-27  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/chanserv.c: SF feature 2353198. Patch from CaptKirk. Added
	the channel flag to the register command. Also removed the
	helping flag.

2008-12-27  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/hash.c: SF feature 2353183. Made X3 aware of +a.

	* src/hash.h: SF feature 2353183. Made X3 aware of +a.
